Fix syntax errors in HTML and spacing errors in CSS

--- a/week02/styles/styles.css
+++ b/week02/styles/styles.css
@@ -1,52 +1,50 @@
-main  {
-max-width: 840px;
+main {
+    max-width: 840px;
 }
-aside  {
-width: 20rem;
-margin: 1rem;
-border: 1px solid rgba(0, 0, 0, 0.2);
-padding: 1rem;
-background-color: white;
-text-align: center;
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: white;
+    text-align: center;
 }
+
 aside img {
     width: 200px;
     height: auto;
 }
 
-main img  {
+main img {
     width: 150px;
     height: auto;
     padding: 2px;
-    border:1px solid steelblue;
+    border: 1px solid steelblue;
     box-shadow: 0 0 30px gray;
-
 }
+
 footer {
-    margin: 15px;
-    border-top: 1px solid #000;
+    margin-top: 15px;
+    border-top: 1px solid #000000;
     text-align: center;
 }
-nav  {
-  background-color: darkblue;
-  padding: 10px;
+
+nav {
+    background-color: darkblue;
+    padding: 10px;
 }
+
 nav a {
     color: white;
     display: block;
     padding: 20px;
 }
+
 h1 {
     color: darkblue;
+}
 
-}
-img {
-    width: 150px;
-    height: auto;
-    border: 1 px solid black;
-    padding: 2px;
-    box-shadow: 0 0 30 px gray;
-}
 p {
     padding: 0px;
 }
